# mini-web-agent

./: .gitignore  CLAUDE.md  README.md  answer.txt  caring_results.txt  index.html  insurance_panel_snippet.txt  insurance_plan_type_snapshot.txt  not_caring_results.txt  plan.md  plan_type_evidence.txt  pyproject.toml  run_local_eval.sh  scenario1_results.txt  selected_hotel.txt  visible_black_candidates.json  visible_black_onepiece_candidates.json
agent_runtime/: browser_session.py  image_qa.py  self_reflection.py
configs/: qwen35_0_8b_web_agent_hard_2gpu.yaml  qwen35_2b_web_agent_hard_4gpu.yaml  qwen35_4b_web_agent.yaml  qwen35_4b_web_agent_easy_4gpu.yaml  qwen35_4b_web_agent_easy_eval.yaml  qwen35_4b_web_agent_hard_4gpu.yaml  qwen35_4b_web_agent_hard_4gpu_self_launch.yaml  qwen35_9b_web_agent_all3_eval_sft.yaml  qwen35_9b_web_agent_easy_4gpu.yaml  qwen35_9b_web_agent_easy_8gpu.yaml  qwen35_9b_web_agent_easy_eval.yaml  qwen35_9b_web_agent_hard_8gpu.yaml  qwen3_8b_rl.yaml  qwen3_8b_rl_wm05.yaml
demo/: README.md
docker/: .dockerignore  Dockerfile  README.md  build.sh  requirements.txt  run_debug_pure_image.sh  run_debug_q35_image.sh  run_eval_in_pod.sh  run_eval_q35_image.sh  run_sft_q35_image.sh  run_train_pure_image.sh  run_train_q35_image.sh  submit_cpu_debug.sh  submit_debug_9b.sh  submit_debug_pure_image.sh  submit_debug_q35_image.sh  submit_eval_easy.sh  submit_eval_q35_image.sh  submit_interactive_8gpu.sh  submit_real_train_batch.sh  submit_real_train_batch_debug.sh  submit_sft_eval_q35_image.sh  submit_smoke.sh  submit_smoke_9b_triton.sh  submit_train_pure_image.sh  submit_train_q35_image.sh  submit_uv_9b_debug.sh  submit_uv_9b_easy.sh  submit_via_condapack.sh
docs/: 0418_all_best_repro_eval_analysis.md  0421_all_best_default_json_sum20_s300_final_resp_pipeline.md  execution-flow.md  iterative-execution-flow.md  paper-as-a-blog-guide.md  step-llm-execution-flow.md  step_budget_accuracy_gpt54.md  step_budget_accuracy_op47.md  web2skill_blog.md  web_agent_eval.md  web_agent_training.md  web_agent_training_cluster.md
om2w_judge/: run.py  utils.py
patches/: skyrl_minimal_hooks.patch
scripts/: apply_hooks_to_skyrl.sh  run_command.sh  (+28 more)
(+345 files in other folders)
