[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webwright"
version = "0.1.0"
description = "Webwright: minimal SWE-style web agent harness with OpenAI / Anthropic backends and Browserbase or local Playwright."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "playwright>=1.45",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
]

[project.scripts]
webwright = "webwright.run.mini:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
webwright = ["config/*.yaml", "config/**/*.yaml"]
