[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-rl"
version = "0.1.0"
description = "ECHO terminal-agent RL with an auxiliary world-modeling loss for SkyRL"
requires-python = ">=3.10"
dependencies = [
  "datasets",
  "harbor==0.6.6",
  "loguru",
  "omegaconf",
  "ray",
  "torch",
  "tqdm",
  "transformers",
  "typing_extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["echo_rl", "echo_rl.*"]

[tool.setuptools.package-data]
echo_rl = ["terminal_agent/chat_templates/*.jinja"]
